添加了一些页面

--- a/app/src/main/res/layout/activity_phone_repair.xml
+++ b/app/src/main/res/layout/activity_phone_repair.xml
@@ -177,6 +177,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
+        android:textColor="#fff"
+        android:textSize="20dp"
         android:background="@mipmap/u134"
         android:text="确认" />
 </LinearLayout>
