--- a/app/src/main/res/layout/activity_appliance_repair.xml
+++ b/app/src/main/res/layout/activity_appliance_repair.xml
@@ -217,5 +217,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:background="@mipmap/u134"
-        android:text="确认" />
+        android:text="确认"
+        android:textColor="#fff"
+        android:textSize="20dp" />
 </LinearLayout>
