--- a/app/src/main/res/layout/activity_compter_repair.xml
+++ b/app/src/main/res/layout/activity_compter_repair.xml
@@ -193,8 +193,7 @@
         android:hint="请对您的手机故障进行简单的描述"
         android:padding="20dp"
         android:text="开机进不去系统，黑屏白字"
-        android:textSize="18dp"
-        />
+        android:textSize="18dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -225,5 +224,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:background="@mipmap/u134"
-        android:text="确认" />
+        android:text="确认"
+        android:textColor="#fff"
+        android:textSize="20dp" />
 </LinearLayout>
