增加了一些页面

--- a/app/src/main/res/layout/item_my_order.xml
+++ b/app/src/main/res/layout/item_my_order.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="10dp"
     android:background="#fff"
     android:orientation="vertical">
-
+    <!--===============================第一层===============================-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,13 +32,13 @@
             android:text="已接单"
             android:textColor="#ff6633" />
     </LinearLayout>
-
+    <!--===============================第一层===============================-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="20dp"
         android:background="#bcbcbc" />
-
+    <!--===============================第二层===============================-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -119,16 +119,14 @@
             android:layout_marginTop="10dp"
             android:scaleType="fitXY"
             android:src="@mipmap/u794" />
-
-
     </LinearLayout>
-
+    <!--===============================第二层===============================-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="20dp"
         android:background="#bcbcbc" />
-
+    <!--===============================第三层===============================-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -163,8 +161,6 @@
             android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:text="取消订单" />
-
-
     </LinearLayout>
-
+    <!--===============================第三层===============================-->
 </LinearLayout>
