--- a/app/src/main/res/layout/activity_phone_repair.xml
+++ b/app/src/main/res/layout/activity_phone_repair.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    style="@style/title"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -24,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
         android:background="#fff"
         android:gravity="center_vertical"
         android:paddingBottom="10dp"
