--- a/app/src/main/res/layout/activity_address_management.xml
+++ b/app/src/main/res/layout/activity_address_management.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/title"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/title"
     android:orientation="vertical">
 
     <com.yxh.yixiuge.MyTopBar
@@ -20,6 +20,11 @@
         layout="@layout/include_title_line"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       ></LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
