--- a/app/src/main/res/layout/activity_repair_phone.xml
+++ b/app/src/main/res/layout/activity_repair_phone.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     style="@style/title"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/repair_phone_ll_pinpai"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -46,6 +47,7 @@
             android:background="#00cccc" />
 
         <TextView
+            android:id="@+id/repair_phone_tv_pinpai"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -60,6 +62,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/repair_phone_ll_xinghao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -85,6 +88,7 @@
             android:background="#00cccc" />
 
         <TextView
+            android:id="@+id/repair_phone_tv_xinghao"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -100,6 +104,7 @@
 
 
     <LinearLayout
+        android:id="@+id/repair_phone_ll_guzhang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
@@ -125,6 +130,7 @@
             android:background="#00cccc" />
 
         <TextView
+            android:id="@+id/repair_phone_tv_guzhang"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -139,6 +145,7 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/repair_phone_et_guzhangmiaoshu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
@@ -147,23 +154,33 @@
         android:padding="20dp"
         android:textSize="18dp" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="#fff"
+        android:gravity="center_vertical"
         android:padding="10dp">
 
-        <LinearLayout
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/repair_phone_rv_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"></android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/repair_phone_ll_picture"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@mipmap/u123"
             android:gravity="center"
             android:padding="10dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:background="@mipmap/u130"
                 android:padding="10dp"
                 android:src="@mipmap/u132" />
@@ -171,6 +188,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/repair_phone_bt_queren"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
