--- a/app/src/main/res/layout/activity_address_management.xml
+++ b/app/src/main/res/layout/activity_address_management.xml
@@ -21,10 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       ></LinearLayout>
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
 
     <RelativeLayout
         android:layout_width="match_parent"
