--- a/app/src/main/res/layout/item_repair_picture.xml
+++ b/app/src/main/res/layout/item_repair_picture.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_repair_picture_ll"
     android:layout_width="100dp"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@mipmap/u123">
+
 
     <ImageView
         android:id="@+id/item_repair_picture_img"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginRight="10dp"
+        android:layout_gravity="center"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/tianjia" />
 </LinearLayout>
